<resources>
    <string name="app_name">My Covid-19 Assistant</string>
    <string name="action_settings">Settings</string>
    <string name="temperature">Temperature:</string>
    <string name="my_covid_19_diary">My COVID-19 Diary</string>
    <string name="cough">Cough?</string>
    <string name="fatigue">Fatigue?</string>
    <string name="chest_pain">Chest pain?</string>
    <string name="breath_difficulty">Breath difficulty?</string>
    <string name="less_common_symptoms">Less common symptoms</string>
    <string name="sore_throat">Sore throat?</string>
    <string name="muscle_pain_weakness">Muscle pain/weakness?</string>
    <string name="headache">Headache?</string>
    <string name="loss_of_taste_smell">Loss of taste/smell?</string>
    <string name="confusion_dizziness">Confusion/Dizziness?</string>
    <string name="rash_hives_skin_lesions">Rash/hives skin lesions?</string>
    <string name="salvar">SAVE</string>
    <string name="next">NEXT</string>
    <string name="am">Am</string>
    <string name="pm">Pm</string>
    <string name="day">Day</string>
    <string name="goto_table">Self Monitoring</string>
    <string name="goto_triage">Triage</string>
    <string name="goto_faq">Learn More</string>
    <string name="your_name">Your First Name </string>
    <string name="your_age">Age</string>
    <string name="new_profile">New Profile</string>
    <string name="risk_group_info">If any, mark what risk groups you belong to:</string>
    <string name="modify_your_profile">Modify your profile</string>
    <string name="delete_your_profile">Delete your profile</string>
    <string name="open_menu">open_menu</string>
    <string name="DeleteYourSave">DeleteYourSave</string>
    <string name="chronic_lung_disease">Chronic Lung Disease</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="pregnancy">Pregnancy</string>
    <string name="heart_disease_with_complications">Heart Desease With Complications</string>
    <string name="compromised_immune_system">Compromised Immune System</string>
    <string name="severe_obesity_bmi_40"><![CDATA[Severe Obesity (BMI > 40)]]></string>
    <string name="hiv_carrier">HIV Carrier</string>
    <string name="diabetes_carrier">Diabetes Carrier</string>
    <string name="renal_failure_or_other_liver_disease">Renal Failure, or liver disease</string>
    <string name="answer_according_to_your_isolation_conditions">Answer according to your isolation conditions:</string>
    <string name="live_alone">Do you live alone or are you able to isolate yourself from the people who live with you?</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="food_resources">Can you have access to food resources for more than a week without leaving your home?</string>
    <string name="virtual_triage">Virtual Triage</string>
    <string name="if_any_select_symptoms">If any, mark which symptoms you have:</string>
    <string name="infected_contact_str">Have you or someone who lives with you had contact with a person who may be infected?</string>
    <string name="risk_country_contact_str">Have you or someone who lives with you traveled to a country or area with a high risk of contamination?</string>
    <string name="finish_btn_str">Finish</string>
    <string name="fever_above_100_4_str">Fever (Above 100.4 F)</string>
    <string name="shortness_of_breath_str">Shortness of breath</string>
    <string name="chest_pain_or_pressure_str">Chest pain or pressure</string>
    <string name="blue_lips_str">Blue lips</string>
    <string name="difficulty_breathing_str">Difficulty breathing</string>
    <string name="confusion_str">Confusion</string>
    <string name="please_answer_according_to_your_recent_history">Please answer according to your recent history:</string>
    <string name="you_re_fine_relax">You are Fine!</string>
    <string name="return_str">return</string>
    <string name="call_your_doctor">Call Your Doctor!</string>
    <string name="be_aware_2">Since you have symptoms, it is best to stay separate from people, even inside your home, as much as possible\n\nKeep monitoring your symptoms, and if they get worse, consider calling your doctor or the emergency hotline 911\n\nYou can also use our daily COVID-19 table to help monitor yourself</string>
    <string name="be_aware_1">Even with no symptoms, you might have contracted COVID-19 from people with whom you had contact\n\nBut don\'t worry! you do not need to go to a hospital unless symptoms start to appear\n\nGoing to the hospital now is also a risk, as you can be exposed to the virus if you don\'t already have it. Try to isolate yourself for a few days and you\'ll probably be fine</string>
    <string name="be_aware">Be Aware!</string>
    <string name="yellow_background_description">Yellow_Background</string>
    <string name="this_is_a_red_background">This is a red background</string>
    <string name="call_doctor1">It\'s better to call your doctor, or the emergency hotline 911, to get medical assistance and take a COVID-19 test\n\nBesides, try to isolate yourself as much as possible, and if you have symptoms, try to monitor them. You can use our daily COVID-19 table to help you do it</string>
    <string name="this_is_a_green_background">This is a green background</string>
    <string name="you_are_fine1">You probably don\'t have COVID-19, so you don\'t have to worry\n\nHowever, it\'s better to avoid contact with people who may be infected, as well as agglomerations\n\nWhen going outside, remember to wear a mask, and always clean your hands</string>
    <string name="intro">Hello, I\'m your personal assistant. How are you?</string>
    <string name="welcome">Welcome</string>
    <string name="questions_and_answers">Questions And Answers</string>
</resources>