<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".table_content">


    <TextView
        android:id="@+id/textView_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/new_profile"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/your_name"
                android:textColor="#000000"
                android:textStyle="bold"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/age"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/your_age"
                android:textStyle="bold"
                android:textColor="#000000"
                android:importantForAutofill="no"
                android:inputType="number" />

        </TableRow>
    </TableLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/button_confirm_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:text="@string/risk_group_info"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/tableLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView_pregnancy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pregnancy"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="#303030"
                        android:textSize="18sp" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <CheckBox
                        android:id="@+id/checkBox_pregnancy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView_lung_disease"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chronic_lung_disease"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="#303030"
                        android:textSize="18sp" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <CheckBox
                        android:id="@+id/checkBox_lung_disease"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView_hearth_disease"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/heart_disease_with_complications"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="#303030"
                        android:textSize="18sp" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <CheckBox
                        android:id="@+id/checkBox_hearth_disease"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView_immune_syst"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/compromised_immune_system"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="#303030"
                        android:textSize="18sp" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <CheckBox
                        android:id="@+id/checkBox_immune_syst"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView_obesity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/severe_obesity_bmi_40"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="#303030"
                        android:textSize="18sp" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <CheckBox
                        android:id="@+id/checkBox_obesity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView_hiv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hiv_carrier"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="#303030"
                        android:textSize="18sp" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <CheckBox
                        android:id="@+id/checkBox_hiv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView_diabetes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/diabetes_carrier"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="#303030"
                        android:textSize="18sp" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <CheckBox
                        android:id="@+id/checkBox_diabetes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView_liver_desease"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/renal_failure_or_other_liver_disease"
                        android:textColor="#303030"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="18sp" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="10pt" />

                    <CheckBox
                        android:id="@+id/checkBox_liver_disease"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/answer_according_to_your_isolation_conditions"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="15dp"
                android:shrinkColumns="*"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="15dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/live_alone"
                        android:textColor="#303030"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="18sp" />

                    <ToggleButton
                        android:id="@+id/live_alone_btn"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:text="@string/togglebutton"
                        android:textOff="@string/no"
                        android:textOn="@string/yes" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/food_resources"
                        android:textColor="#303030"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="18sp" />

                    <ToggleButton
                        android:id="@+id/food_res_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/togglebutton"
                        android:textOff="@string/no"
                        android:textOn="@string/yes" />
                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_confirm_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:text="@string/salvar"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>